--- a/index.html
+++ b/index.html
@@ -1,23 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
    <head>
-      <meta charset="UTF-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-      <meta name="description" content="TrueLink Connect provides IT solutions, software development, AI services, technical support, and consulting for startups and growing businesses.">
-      <meta name="author" content="TrueLink Connect">
-      <link rel="preconnect" href="https://fonts.gstatic.com">
-      <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap"
-         rel="stylesheet">
-      <title>TrueLink Connect</title>
-      <!-- Bootstrap core CSS -->
-      <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-      <!-- Additional CSS Files -->
-      <link rel="stylesheet" href="assets/css/fontawesome.css">
-      <link rel="stylesheet" href="assets/css/templatemo-onix-digital.css">
-      <link rel="stylesheet" href="assets/css/animated.css">
-      <link rel="stylesheet" href="assets/css/owl.css">
-      <!---->
-   </head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+  <!-- Primary SEO -->
+  <title>TrueLink Connect | IT Solutions, Software & AI Services</title>
+  <meta name="description" content="TrueLink Connect provides IT solutions, software development, AI services, technical support, and consulting for startups and growing businesses.">
+  <meta name="author" content="TrueLink Connect">
+
+  <!-- Open Graph (WhatsApp, Facebook, LinkedIn) -->
+  <meta property="og:title" content="TrueLink Connect | IT Solutions & AI Services">
+  <meta property="og:description" content="IT solutions, software development, AI services, and technical support for modern businesses.">
+  <meta property="og:image" content="https://www.truelinkconnect.com/assets/images/truelink-share.png">
+  <meta property="og:url" content="https://www.truelinkconnect.com/">
+  <meta property="og:type" content="website">
+
+  <!-- Twitter / X -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="TrueLink Connect | IT Solutions & AI Services">
+  <meta name="twitter:description" content="Software development, AI services, and enterprise IT support.">
+  <meta name="twitter:image" content="https://www.truelinkconnect.com/assets/images/truelink-share.png">
+
+  <!-- Favicon -->
+  <link rel="icon" href="assets/images/favicon.ico" type="image/x-icon">
+  <link rel="apple-touch-icon" href="assets/images/apple-touch-icon.png">
+
+  <!-- Fonts -->
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+
+  <!-- CSS -->
+  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="assets/css/fontawesome.css">
+  <link rel="stylesheet" href="assets/css/templatemo-onix-digital.css">
+  <link rel="stylesheet" href="assets/css/animated.css">
+  <link rel="stylesheet" href="assets/css/owl.css">
+</head>
+
    <body>
       <!-- ***** Preloader Start ***** -->
       <div id="js-preloader" class="js-preloader">
